[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://font-sourcecode-16.tres" type="DynamicFont" id=4]

[node name="GameRoot" type="Node2D"]
script = ExtResource( 1 )

[node name="LevelData" type="Node2D" parent="."]

[node name="Ground" type="TileMap" parent="LevelData"]
light_mask = 4
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 0, 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 14, 6, 0, 15, 6, 0, 65536, 6, 0, 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65543, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 6, 0, 65549, 6, 0, 65550, 6, 0, 65551, 6, 0, 131072, 6, 0, 131073, 6, 0, 131074, 6, 0, 131075, 6, 0, 131076, 6, 0, 131077, 6, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0, 131081, 6, 0, 131082, 6, 0, 131083, 6, 0, 131084, 6, 0, 131085, 6, 0, 131086, 6, 0, 131087, 6, 0, 196608, 6, 0, 196609, 6, 0, 196610, 6, 0, 196611, 6, 0, 196612, 6, 0, 196613, 6, 0, 196614, 6, 0, 196615, 6, 0, 196616, 6, 0, 196617, 6, 0, 196618, 6, 0, 196619, 6, 0, 196620, 6, 0, 196621, 6, 0, 196622, 6, 0, 196623, 6, 0, 262144, 6, 0, 262145, 6, 0, 262146, 6, 0, 262147, 6, 0, 262148, 6, 0, 262149, 6, 0, 262150, 6, 0, 262151, 6, 0, 262152, 6, 0, 262153, 6, 0, 262154, 6, 0, 262155, 6, 0, 262156, 6, 0, 262157, 6, 0, 262158, 6, 0, 262159, 6, 0, 327680, 6, 0, 327681, 6, 0, 327682, 6, 0, 327683, 6, 0, 327684, 6, 0, 327685, 6, 0, 327686, 6, 0, 327687, 6, 0, 327688, 6, 0, 327689, 6, 0, 327690, 6, 0, 327691, 6, 0, 327692, 6, 0, 327693, 6, 0, 327694, 6, 0, 327695, 6, 0, 393216, 6, 0, 393217, 6, 0, 393218, 6, 0, 393219, 6, 0, 393220, 6, 0, 393221, 6, 0, 393222, 6, 0, 393223, 6, 0, 393224, 6, 0, 393225, 6, 0, 393226, 6, 0, 393227, 6, 0, 393228, 6, 0, 393229, 6, 0, 393230, 6, 0, 393231, 6, 0, 458752, 6, 0, 458753, 6, 0, 458754, 6, 0, 458755, 6, 0, 458756, 6, 0, 458757, 6, 0, 458758, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 458764, 6, 0, 458765, 6, 0, 458766, 6, 0, 458767, 6, 0, 524288, 6, 0, 524289, 6, 0, 524290, 6, 0, 524291, 6, 0, 524292, 6, 0, 524293, 6, 0, 524294, 6, 0, 524295, 6, 0, 524296, 6, 0, 524297, 6, 0, 524298, 6, 0, 524299, 6, 0, 524300, 6, 0, 524301, 6, 0, 524302, 6, 0, 524303, 6, 0, 589824, 6, 0, 589825, 6, 0, 589826, 6, 0, 589827, 6, 0, 589828, 6, 0, 589829, 6, 0, 589830, 6, 0, 589831, 6, 0, 589832, 6, 0, 589833, 6, 0, 589834, 6, 0, 589835, 6, 0, 589836, 6, 0, 589837, 6, 0, 589838, 6, 0, 589839, 6, 0 )

[node name="Fence" type="TileMap" parent="LevelData"]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 1, 20, 0, 2, 20, 0, 3, 20, 0, 4, 20, 0, 5, 20, 0, 6, 20, 0, 7, 20, 0, 8, 20, 0, 9, 20, 0, 10, 20, 0, 11, 20, 0, 12, 20, 0, 65536, 18, 0, 65549, 19, 0, 131072, 18, 0, 131085, 19, 0, 196608, 18, 0, 196621, 19, 0, 262144, 18, 0, 262157, 19, 0, 327680, 18, 0, 327693, 19, 0, 393216, 18, 0, 393229, 19, 0, 458752, 18, 0, 458765, 19, 0, 524289, 17, 0, 524290, 17, 0, 524291, 17, 0, 524292, 17, 0, 524293, 17, 0, 524294, 17, 0, 524295, 17, 0, 524296, 17, 0, 524297, 17, 0, 524298, 17, 0, 524299, 17, 0, 524300, 17, 0 )

[node name="Grass" type="TileMap" parent="LevelData"]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 131078, 3, 0, 196609, 3, 0, 196613, 3, 0, 262146, 3, 0, 262148, 3, 0, 327683, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 98.5895, 88.8462 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TimeElapsed" type="Label" parent="HUD"]
margin_left = 64.0
margin_top = 5.0
margin_right = 256.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.0784314, 0.0588235, 0.85098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Time Elapsed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrassLeft" type="Label" parent="HUD"]
margin_left = 288.0
margin_top = 5.0
margin_right = 480.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.0784314, 0.0588235, 0.85098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Grass Left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrassCut" type="Label" parent="HUD"]
margin_left = 512.0
margin_top = 5.0
margin_right = 704.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.0784314, 0.0588235, 0.85098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Grass Cut:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MowerHealth" type="Label" parent="HUD"]
margin_left = 712.0
margin_top = 5.0
margin_right = 904.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.0784314, 0.0588235, 0.85098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Mower Health: 
"
__meta__ = {
"_edit_use_anchors_": false
}
